--- a/netlify.toml
+++ b/netlify.toml
@@ -1,30 +1,23 @@
-
 # netlify.toml - Configuration for Netlify deployments
 
 [build]
-  # Specify the command to build your site
-  command = "npm install --legacy-peer-deps && npm run build"
-  
-  # Directory that contains the deploy-ready HTML files and assets
-  publish = "dist"
-  
-  # Environment variables set during build
-  environment = { SKIP_GO_INSTALL = "true", NODE_VERSION = "18" }
+command = "npx update-browserslist-db@latest --no-update-notifier && npm install --legacy-peer-deps && npm run build"
+publish = "dist"
 
-# Exclude Supabase functions from processing
+[build.environment]
+NODE_VERSION = "18"
+SKIP_GO_INSTALL = "true"
+
 [build.processing]
-  skip_processing = true
-  
+skip_processing = true
+
 [build.processing.html]
-  pretty_urls = true
+pretty_urls = true
 
-# Ignore the Supabase functions directory during build
 [[plugins]]
-  package = "@netlify/plugin-gatsby"
+package = "@netlify/plugin-gatsby"
 
-    
-# Redirect all routes to index.html for SPA routing
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
