--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "npm install --legacy-peer-deps"
+    "preview": "vite preview"
   },
   "browserslist": [
     "defaults"
@@ -19,15 +18,15 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.6",
     "@radix-ui/react-dialog": "^1.0.6",
-"@radix-ui/react-dropdown-menu": "^2.1.14",
-"@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-menubar": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.6",
     "@radix-ui/react-toast": "^1.1.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@react-hookz/web": "^18.4.2",
+    "@react-hookz/web": "^25.1.1",
     "@tanstack/react-query": "^5.19.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
