--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.1",
     "react-router-dom": "^6.22.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
