--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-menubar": "^1.0.6",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-select": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.6",
     "@radix-ui/react-tabs": "^1.0.6",
