--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.324.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.1.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.1",
