--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
+    "embla-carousel": "^8.0.0",
+    "embla-carousel-react": "^8.0.1",
     "lucide-react": "^0.324.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.1.7",
