--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
-# netlify.toml - Configuration for Netlify deployments
+# netlify.toml - Configuración para despliegues en Netlify
 
 [build]
-  command = "npm run build"
+  command = "npm install --legacy-peer-deps && npm run build"
   publish = "dist"
 
 [build.environment]
