--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "browserslist": [
     "defaults"
@@ -17,42 +18,30 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.6",
-    "@radix-ui/react-avatar": "^1.0.6",
-    "@radix-ui/react-checkbox": "^1.0.6",
     "@radix-ui/react-dialog": "^1.0.6",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-menubar": "^1.0.6",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-select": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.6",
     "@radix-ui/react-tabs": "^1.0.6",
     "@radix-ui/react-toast": "^1.1.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@react-hookz/web": "^25.1.1",
-    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.19.2",
+    "@react-hookz/web": "^25.1.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^2.30.0",
-    "embla-carousel": "^8.0.0",
-    "embla-carousel-react": "^8.0.1",
     "lucide-react": "^0.324.0",
     "react": "^18.2.0",
-    "react-day-picker": "^9.1.7",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.1",
     "react-router-dom": "^6.22.3",
-    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "country-state-city": "^3.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
