--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           node-version: 18
 
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npm run test -- --coverage
