--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,4 +19,4 @@ jobs:
           node-version: 18
 
       - run: npm install --legacy-peer-deps
-      - run: npm run test -- --coverage
+      - run: npx vitest run
