--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,4 +19,4 @@ jobs:
           node-version: 18
 
       - run: npm install --legacy-peer-deps
-      - run: npx vitest run
+      - run: node --experimental-vm-modules node_modules/vitest/vitest.mjs run
